# ogunscan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py  vercel.json
.github/workflows/: publish.yml  shield-scan.yml  test.yml
docs/: shield-launchd.plist.template
site/: index.html
site/signatures/: latest.json
src/: ogunscan.py  scanner.py
src/ogunscan/: __init__.py  __main__.py  cli.py  diff.py  engine.py  models.py  reporter.py  sarif.py  signatures.py
src/ogunscan/rules/: __init__.py  builtin.json
src/ogunscan/shield/: __init__.py  cli.py  daemon.py  history.py  license.py  paths.py  remote.py  state.py  watcher.py
src/ogunscan/shield/notifiers/: __init__.py  base.py  email.py  slack.py  stdout.py
tests/: test_diff.py  test_ogunscan.py  test_sarif.py  test_scanner.py  test_signatures.py
tests/shield/: test_daemon_integration.py  test_email_notifier.py  test_history.py  test_license.py  test_notifiers.py  test_remote.py  test_slack_notifier.py  test_state.py
